# Osuruk-Engine

./: .gitignore  CMakeLists.txt  LICENCE  README.md  ThirdPartyLicences.md
OsurukEngine/: CommonValues.h  OsurukEngine_Main.cpp  main.cpp
OsurukEngine/Engine/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
OsurukEngine/Shaders/: Basic.shader
OsurukEngine/Shaders/shaders_old/: directional_shadow_map.frag  directional_shadow_map.vert  omni_shadow_map.frag  omni_shadow_map.geom  omni_shadow_map.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
OsurukEngine/Tests/: MyFirstProgram.cpp  MyFirstProgram.h  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestRender3D.cpp  TestRender3D.h  TestTexture2D.cpp  TestTexture2D.h
OsurukEngine/Worlds/: TestWorld.lua
cmake/: MacBundleFixup.cmake  MacRecursiveSign.cmake
